Fix misaligned account bio in moderation interface (#495)
Caused by adding margin to the component version and it's reused in moderation interface.

--- a/app/javascript/flavours/polyam/styles/admin.scss
+++ b/app/javascript/flavours/polyam/styles/admin.scss
@@ -992,6 +992,7 @@ a.name-tag,
     box-sizing: border-box;
     padding: 20px;
     color: $primary-text-color;
+    margin: 0; // Polyam: Added margin to component
   }
 }
 
